| Summary: | ASTERISK-26181: REF_DEBUG: Node object incorrectly logged during duplicate replacement | ||
| Reporter: | Corey Farrell (coreyfarrell) | Labels: | |
| Date Opened: | 2016-07-07 12:41:33 | Date Closed: | 2016-07-08 06:49:10 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Core/AstMM |
| Versions: | SVN 13.9.1 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Using AO2_CONTAINER_ALLOC_OPT_DUPS_REPLACE can result in an unref being recorded to the refs log for the node being replaced. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2016-07-07 12:41:34.442-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. | ||